<resources>
    <string name="app_name">Boker</string>

    <string name="preferences_boker">PreferencesBoker</string>
    <string name="preferences_uid">UID</string>
    <string name="preferences_userName">UserName</string>
    <string name="preferences_email">Email</string>

    <string name="title_activity_main">Main Activity</string>

    <string name="recommended_by_boker">Recommended by Boker</string>
    <string name="latest_search_by_users">Latest searches by users</string>

    <string name="description_genres">Search by literary genres</string>
    <string name="card_genre_autobiography_biography">Autobiography &amp; Biography</string>
    <string name="card_genre_essay">Essay</string>
    <string name="card_genre_fable">Fable</string>
    <string name="card_genre_history">History</string>
    <string name="card_genre_legend">Legend</string>
    <string name="card_genre_myth">Myth</string>
    <string name="card_genre_novel">Novel</string>
    <string name="card_genre_poetry">Poetry</string>
    <string name="card_genre_story">Story</string>
    <string name="card_genre_theater">Theater</string>

    <string name="description_categories">Search by most searched categories in Google Books</string>
    <string name="card_category_agriculture">Agriculture</string>
    <string name="card_category_art">Art</string>
    <string name="card_category_architecture">Architecture</string>
    <string name="card_category_autobiography_biography">Autobiography &amp; Biography</string>
    <string name="card_category_business_economics">Business &amp; Economics</string>
    <string name="card_category_classic">Classic</string>
    <string name="card_category_computers">Computers</string>
    <string name="card_category_cookbooks">Cookbooks</string>
    <string name="card_category_design">Design</string>
    <string name="card_category_education">Education</string>
    <string name="card_category_fiction">Fiction</string>
    <string name="card_category_fantasy">Fantasy</string>
    <string name="card_category_government_publications">Government publications</string>
    <string name="card_category_health_fitness">Health &amp; Fitness</string>
    <string name="card_category_history">History</string>
    <string name="card_category_humor">Humor</string>
    <string name="card_category_juvenile">Juvenile</string>
    <string name="card_category_juvenile_fiction">Juvenile Fiction</string>
    <string name="card_category_juvenile_nonfiction">Juvenile Nonfiction</string>
    <string name="card_category_language_arts_disciplines">Language Arts &amp; Disciplines</string>
    <string name="card_category_law">Law</string>
    <string name="card_category_literary_criticism">Literary Criticism</string>
    <string name="card_category_mathematics">Mathematics</string>
    <string name="card_category_music">Music</string>
    <string name="card_category_mystery">Mystery</string>
    <string name="card_category_performing_arts">Performing Arts</string>
    <string name="card_category_pets">Pets</string>
    <string name="card_category_philosophy">Philosophy</string>
    <string name="card_category_photography">Photography</string>
    <string name="card_category_political_science">Political Science</string>
    <string name="card_category_psychology">Psychology</string>
    <string name="card_category_religion">Religion</string>
    <string name="card_category_romance">Romance</string>
    <string name="card_category_science">Science</string>
    <string name="card_category_self_help">Self-Help</string>
    <string name="card_category_science_fiction">Science Fiction</string>
    <string name="card_category_social_science">Social Science</string>
    <string name="card_category_technology_engineering">Technology &amp; Engineering</string>
    <string name="card_category_telecommunication">Telecommunication</string>
    <string name="card_category_terror">Terror</string>
    <string name="card_category_weather_control">Weather control</string>

    <string name="menu_home">Home</string>
    <string name="menu_genres">Genres</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_saved_books">Saved books</string>
    <string name="menu_scan_code">Scan ISBN code</string>
    <string name="menu_view_libraries">View bookstores on Google Maps</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate_us">Rate Us</string>
</resources>
